--- a/service-consumer/pom.xml
+++ b/service-consumer/pom.xml
@@ -37,8 +37,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot</artifactId>
-            <version>2.0.3</version>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>${rocketmq.spring.boot.starter.version}</version>
             <scope>compile</scope>
         </dependency>
 
