--- a/service-producer/pom.xml
+++ b/service-producer/pom.xml
@@ -16,6 +16,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <properties>
+        <rocketmq.spring.boot.starter.version>2.0.3</rocketmq.spring.boot.starter.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -27,11 +31,10 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.0.3</version>
+            <version>${rocketmq.spring.boot.starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
