--- a/service-producer/src/main/resources/application.yml
+++ b/service-producer/src/main/resources/application.yml
@@ -4,8 +4,7 @@ spring:
 
 # rocketmq配置
 rocketmq:
-  # nameserver地址
-  name-server: 60.60.1.31:9876;60.60.1.32:9876
+  name-server: 60.60.1.31:9876;60.60.1.32:9876 # nameserver地址
   producer:
     # 生产组名称
     group: producer_group
